--- a/vsdk/service_development/templates/orderlist.xml
+++ b/vsdk/service_development/templates/orderlist.xml
@@ -1,6 +1,6 @@
 {% extends "base.xml" %}
 {#
-plays back a message, then sends the user to the redirect
+plays the list of orders and lets user choose one
 #}
 
 {% block content %}
@@ -8,15 +8,13 @@ plays back a message, then sends the user to the redirect
 
 <field name="choice">
 <prompt>
+<audio src="{{ instructions_label }}" />
 {% for audio_url in order_audio_urls %}
 <audio src="{{ order_number_voice_label }}"/>
 {% for number in language.get_interface_numbers_voice_label_url_list %}{% if forloop.counter0 == forloop.parentloop.counter %}<audio src="{{ number }}"/>{% endif %}{% endfor %}
 <audio src="{{ audio_url }}"/>
 {% endfor %}
 </prompt>
-{% if redirect_url %}
-<goto next="{{ redirect_url }}"/>
-{% endif %}
 
 
 {# all possible inputs from the user #}
@@ -32,7 +30,7 @@ plays back a message, then sends the user to the redirect
 
 {# when there has been input, redirect the user to the corresponding URL #}
 <filled>
-    <submit next="blahoption" method="post" namelist="choice"/>
+  <submit next="{{ redirect_url_POST }}" method="post" namelist="choice"/>
 </filled>
 
 </field>
